<resources>
    <string name="app_name">Grade Calculator App</string>
    <string name="home">Home</string>
    <string name="clear">Clear</string>
    <string name="delete_course">Delete Course</string>
    <string name="delete_grade_from_course">Delete Grade from Course</string>
    <string name="course_name">Course Name</string>
    <string name="category_name_for_grade">Category Name (for grade)</string>
    <string name="delete_button">Delete</string>
    <string name="course_name_grade_credit_hours">Course Name - Grade (Credit Hours)</string>
    <string name="edit">Edit</string>
    <string name="course_name_text">Course Name</string>
    <string name="credit_hours">Credit Hours</string>
    <string name="add">Add</string>
    <string name="total_gpa_0_0">Total GPA: 0.0</string>
    <string name="category_name">Category name</string>
    <string name="grade">Grade</string>
    <string name="weight">Weight</string>
    <string name="grades_will_be_listed_here">All grades:</string>
    <string name="total_weighted_grade_0_0">Total weighted grade</string>
    <string name="done">Done</string>
    <string name="delete_course_button">Delete Course</string>
    <string name="grade_item">Grade Item</string>
    <string name="delete_grade">Delete</string>
    <string name="all_grades">All Grades:</string>
    <string name="letter_grade">Letter Grade:</string>
    <string name="settings">Settings</string>
    <string name="base_gpa_and_credit_hours">Base GPA and Credit Hours</string>
    <string name="enter_base_gpa">Enter base GPA</string>
    <string name="enter_base_credit_hours">Enter base credit hours</string>
    <string name="apply">Apply</string>
</resources>