<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_name" />

    <EditText
        android:id="@+id/grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/grade"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">

        <Button
            android:id="@+id/add_grade_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/total_weighted_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_weighted_grade_0_0" />

    <TextView
        android:id="@+id/all_grades_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_grades"
        android:paddingTop="16dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/grades_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="56dp"
        android:scrollbars="vertical" />


</LinearLayout>
