<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_gpa_and_credit_hours" />

    <EditText
        android:id="@+id/base_gpa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_base_gpa" />

    <EditText
        android:id="@+id/base_credit_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_base_credit_hours" />

    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply" />

</LinearLayout>
