<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/delete_option_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/delete_course_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_course"
            android:checked="true" />

        <RadioButton
            android:id="@+id/delete_grade_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_grade_from_course" />
    </RadioGroup>

    <EditText
        android:id="@+id/course_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_name" />

    <EditText
        android:id="@+id/category_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_name_for_grade"
        android:visibility="gone" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button" />
</LinearLayout>
